removed some ugliness
git-svn-id: file:///tmp/owch2_2/branches/hyperarchy@9 afdb5d6e-910f-0410-ac8a-c8b07d4428ab